Clean up testsuite pom