@@ -133,10 +133,6 @@
             <artifactId>shrinkwrap-api</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
     </dependencies>
 
     <build>
@@ -193,30 +189,9 @@
 
     <profiles>
 
-        <!-- tools.jar dependency: needed for Byteman tests. -->
-        <profile>
-            <id>ts.clustering.use-toolsjar-jigsaw.profile</id>
-            <activation>
-                <jdk>[1.9,)</jdk>
-            </activation>
-            <properties>
-                <!-- needed for arquillian-byteman-extension -->
-                <surefire.byteman.argline>-Djdk.attach.allowAttachSelf=true</surefire.byteman.argline>
-                <surefire.byteman.args>-Djboss.modules.system.packages=com.sun.tools.attach,org.jboss.byteman -Djdk.attach.allowAttachSelf=true</surefire.byteman.args>
-            </properties>
-            <dependencies/>
-        </profile>
-
         <!--
           Debugging profiles.
         -->
-        <profile>
-            <id>jpda.profile</id>
-            <activation><property><name>jpda</name></property></activation>
-            <properties>
-                <surefire.jpda.args>-agentlib:jdwp=transport=dt_socket,address=${as.debug.port},server=y,suspend=y</surefire.jpda.args>
-            </properties>
-        </profile>
         <profile>
             <id>debug.profile</id>
             <activation><property><name>debug</name></property></activation>
@@ -247,199 +222,6 @@
                 <mcast2>ff13::3</mcast2>
                 <mcast3>ff13::4</mcast3>
             </properties>
-        </profile>
-        <!-- Ugly workaround for MANTRUN-172 :/   See AS7-3993. -->
-        <profile>
-            <id>ts.ipv6.dummy.node0</id>
-            <activation><property><name>node0</name></property></activation>
-            <properties> <node0>${node0}</node0> </properties>
-        </profile>
-        <profile>
-            <id>ts.ipv6.dummy.node1</id>
-            <activation><property><name>node1</name></property></activation>
-            <properties> <node1>${node1}</node1> </properties>
-        </profile>
-        <profile>
-            <id>ts.ipv6.dummy.mcast</id>
-            <activation><property><name>mcast</name></property></activation>
-            <properties><mcast>${mcast}</mcast></properties>
-        </profile>
-        <profile>
-            <id>ts.ipv6.dummy.node2</id>
-            <activation><property><name>node2</name></property></activation>
-            <properties> <node2>${node2}</node2> </properties>
-        </profile>
-        <profile>
-            <id>ts.ipv6.dummy.node3</id>
-            <activation><property><name>node3</name></property></activation>
-            <properties> <node3>${node3}</node3> </properties>
-        </profile>
-        <profile>
-            <id>ts.ipv6.dummy.mcast1</id>
-            <activation><property><name>mcast1</name></property></activation>
-            <properties><mcast1>${mcast1}</mcast1></properties>
-        </profile>
-        <profile>
-            <id>ts.ipv6.dummy.mcast2</id>
-            <activation><property><name>mcast2</name></property></activation>
-            <properties><mcast2>${mcast2}</mcast2></properties>
-        </profile>
-        <profile>
-            <id>ts.ipv6.dummy.mcast3</id>
-            <activation><property><name>mcast3</name></property></activation>
-            <properties><mcast3>${mcast3}</mcast3></properties>
-        </profile>
-
-        <!-- Security manager. -->
-        <profile>
-            <id>ts.security.manager</id>
-            <activation>
-                <property>
-                    <name>security.manager</name>
-                </property>
-            </activation>
-            <properties>
-                <jboss.args>-secmgr</jboss.args>
-                <jboss.domain.server.args>-secmgr</jboss.domain.server.args>
-                <!-- Re-enable the default surefire execution -->
-                <surefire.default-test.phase>test</surefire.default-test.phase>
-            </properties>
-        </profile>
-
-        <profile>
-            <id>test-reporting</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <executions combine.self="override">
-
-                            <!-- Run the reporting tool. -->
-                            <execution>
-                                <id>reporting</id>
-                                <phase>site</phase>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                                <inherited>false</inherited>
-                                <configuration>
-                                    <target>
-                                        <ant dir="${basedir}" antfile="${basedir}/tools/reporting/buildReports.xml">
-                                            <!-- Defaults.
-                                            <property name="reporting.dir" value="${basedir}/tools/reporting"/>
-                                            <property name="reports.dest.dir" value="${basedir}/target/reports"/>
-                                            <property name="reports.src.mask" value="**/target/surefire-reports/TEST-*.xml"/>
-                                            -->
-                                            <target name="reports"/>
-                                        </ant>
-                                    </target>
-                                </configuration>
-                            </execution>
-
-                            <!-- Help banner. -->
-                            <execution>
-                                <id>banner</id>
-                                <phase>initialize</phase>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                                <inherited>false</inherited>
-                                <configuration>
-                                    <target>
-                                        <loadfile property="help.banner" srcFile="${basedir}/tools/help-banner.txt"/>
-                                        <echo>${help.banner}</echo>
-                                    </target>
-                                </configuration>
-                            </execution>
-
-                        </executions>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.apache.ant</groupId>
-                                <artifactId>ant-junit</artifactId>
-                                <version>${version.ant.junit}</version>
-                            </dependency>
-                        </dependencies>
-                    </plugin>
-
-                </plugins>
-
-            </build>
-        </profile>
-
-        <profile>
-            <id>help</id>
-            <activation><property><name>ts.help</name></property></activation>
-            <build>
-                <plugins>
-                    <!-- Testsuite debugging info. -->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-help-plugin</artifactId>
-                        <inherited>true</inherited>
-                        <executions>
-                            <execution>
-                                <id>help.active-profiles</id>
-                                <phase>initialize</phase>
-                                <goals>
-                                    <goal>active-profiles</goal>
-                                </goals>
-                                <configuration>
-                                    <output>target/help.active-profiles.txt</output>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>help.effective-pom</id>
-                                <phase>initialize</phase>
-                                <goals>
-                                    <goal>effective-pom</goal>
-                                </goals>
-                                <configuration>
-                                    <output>target/help.effective-pom.txt</output>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>help.effective-settings</id>
-                                <phase>initialize</phase>
-                                <goals>
-                                    <goal>effective-settings</goal>
-                                </goals>
-                                <configuration>
-                                    <output>target/help.effective-settings.txt</output>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>help.system</id>
-                                <phase>initialize</phase>
-                                <goals>
-                                    <goal>system</goal>
-                                </goals>
-                                <configuration>
-                                    <output>target/help.system.txt</output>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>properties-maven-plugin</artifactId>
-                        <version>1.0.0</version>
-                        <executions>
-                            <execution>
-                                <phase>initialize</phase>
-                                <goals>
-                                    <goal>write-project-properties</goal>
-                                </goals>
-                                <configuration>
-                                    <outputFile>target/help.properties.txt</outputFile>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
         </profile>
         <profile>
             <id>jdk9</id>
